# initium

./: .gitignore  CACHING.md  CLAUDE.md  CLEANUP_PLAN.md  Cargo.toml  README.md  ROADMAP.md  SETUP.md  STORY.md  justfile  package-lock.json
.github/workflows/: release.yml
.serena/: project.yml
docs/: index.html
docs/assets/: initium.css
docs/superpowers/plans/: 2026-07-12-dart-flutter-support.md
docs/superpowers/specs/: 2026-07-12-dart-flutter-support-design.md
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/generators/: bash.rs  basic.rs  common.rs  dart.rs  flutter.rs  go.rs  hooks.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs
tests/: cli_tests.rs  e2e_tests.rs  fail_on_exists_tests.rs  generators_tests.rs  integration_tests.rs  unit_tests.rs
