[package]
name = "initium-cli"
version = "2.0.0"
edition = "2021"
authors = ["Zack Kitzmiller"]
description = "Init your project. Set your standards. Configs, linters, formatters, git hooks, and tooling setup in one command."
license = "MIT"
repository = "https://github.com/z19r/initium"
keywords = ["cli", "bootstrap", "configuration", "project-setup"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "3.0"
indicatif = "0.18"
walkdir = "2.4"
glob = "0.3"
predicates = "3.1.3"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
assert_cmd = "2.0"
toml = "0.8"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "initium"
path = "src/lib.rs"

[[bin]]
name = "initium"
path = "src/main.rs"
